{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 42,
  "lineage": "f72ea758-1b96-f795-5267-534b4e6bf5da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pfsenseprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648676707729:route-table/rtb-0863b3b713272381f",
            "id": "rtb-0863b3b713272381f",
            "owner_id": "648676707729",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0203c279686ad9971",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pfsense-private"
            },
            "tags_all": {
              "Name": "pfsense-private"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-0f24bc52659fd4ccd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pfsensepub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648676707729:route-table/rtb-016354947020b6684",
            "id": "rtb-016354947020b6684",
            "owner_id": "648676707729",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4aaec9548e20543",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pfsense-public"
            },
            "tags_all": {
              "Name": "pfsense-public"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-0f24bc52659fd4ccd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648676707729:security-group/sg-00fb70fde1c9f938b",
            "description": "pfsense-internal",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fb70fde1c9f938b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "pfsense-internal",
            "name_prefix": "",
            "owner_id": "648676707729",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pfsense-internal"
            },
            "tags_all": {
              "Name": "pfsense-internal"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0f24bc52659fd4ccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pfsense_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pfsense-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648676707729:subnet/subnet-004f2c9f20b2593b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004f2c9f20b2593b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "648676707729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pfsense-internal"
            },
            "tags_all": {
              "Name": "pfsense-internal"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0f24bc52659fd4ccd"
          },
          "dependencies": [
            "aws_vpc.pfsense_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pfsense_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648676707729:vpc/vpc-0f24bc52659fd4ccd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-038915bba00632265",
            "default_route_table_id": "rtb-016354947020b6684",
            "default_security_group_id": "sg-02811c262dd7bae14",
            "dhcp_options_id": "dopt-03d603f9153842456",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f24bc52659fd4ccd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016354947020b6684",
            "owner_id": "648676707729",
            "tags": {
              "Name": "pfsense-VPC"
            },
            "tags_all": {
              "Name": "pfsense-VPC"
            }
          }
        }
      ]
    }
  ]
}